# BinaryJax

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: build_docs.yml  run_test.yml
BinaryJax/: __init__.py
BinaryJax/binaryJax/: basic_function_jax.py  error_estimator.py  linear_sum_assignment_jax.py  model_jax.py  polynomial_solver.py  solution.py  util.py
api/model/: index.html
api/solver/: index.html
api/util/: index.html
api/utils/: index.html
binaryJax/: __init__.py  basic_function_jax.py  error_estimator.py  implicit_der.py  model_jax.py  polynomial_solver.py  solution.py
binaryNumpy/: __init__.py  basic_function.py  model_noimage.py  model_numpy.py
dataFit/: MCMC_demo.py  diagnositc.py
docs/: index.md  requirements.txt
docs/api/: model.md  solver.md  utils.md
example/: KB0371.ipynb
jax_version/: MCMC_demo.py  autodiff.py  basic_function_jax.py  diff_between_mulensmodel_uniform.py  error_estimator.py  example.py  function.py  implicit_der.py  jacobian.txt  jacobian2.txt  jacobian_calculate.py  linear_sum_assignment_jax.py  polynomial_solver.py  solution.py  time_test.py  uniform_model_jax.py
numpy_version/: Solve_Equation.py  basic_function.py  diff_between_mulensmodel_uniform copy.py  example.py  function_numpy.py  jacobian.txt  jacobian_calculate.py  par_verify.py  quard_test.py  uniform_model_noimage.py  uniform_model_numpy.py
result/: parity.txt  roots.txt  roots_before.txt
search/: search_index.json
solve_roots_method/: Ehrlich_Aberth_method.py  LensECom.py  LensEquation.py
test/: curve_search_test.py  example.py  example_numpy.py  find_nearest_test.py  jacobian_calculate.py  par_verify.py  quard_test.py  requirements.txt  test_caustic_mag.py  test_grad.py  test_image_contour.py  test_light_curve.py  test_mag_map.py  test_polynomial_solver.py  test_quadrupole_test.py  test_util.py  time_test.py  time_test_server.py
(+28 files in other folders)
