[project]
name = "microlux"
version = "1.0.0"
description = "A JAX-based package for microlensing binary lens"
authors = [
    {name = "Haibin Ren", email = "rhb23@mails.tsinghua.edu.cn"},
]
requires-python = "~=3.9"
license = {file = "LICENSE"}
readme = "README.md"
urls = {repository = "https://github.com/CoastEgo/microlux"}
keywords = ["jax", "microlensing", "binary lens"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "jax >=0.4.28",
    "numpy",
    "scipy",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["src"]
include = ["microlux"]

[tool.ruff]
extend-include = ["*.ipynb"]
src = []

[tool.ruff.lint]
fixable = ["I001", "F401"]
ignore = ["E501","E402", "E721", "E731", "E741", "F722","E702"]
select = ["E", "F", "I001"]

[tool.ruff.lint.isort]
combine-as-imports = true
extra-standard-library = ["typing_extensions"]
lines-after-imports = 2
order-by-type = false